--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
 .form-button{
   background-color: #f5f5f5;
   border: none;
+  cursor: pointer;
+  cursor: hand;
 }
 
 .title-img{
@@ -26,4 +28,89 @@
 
 .fa-red:before{
   color: red;
+}
+/* 
+ul > li{
+  display: inline-block;
+}
+
+ul > li > a{
+  padding: 15px 30px;
+  display: block;
+  font-size: 0.8em;
+  text-transform: uppercase;
+  letter-spacing: .2em;
+}
+
+ul > li >span{
+  margin-left: 1.2em;
+}
+
+/* ul > li:hover > a{
+  color: blue;
+} */
+/* 
+ul li ul{
+  position: absolute;
+  top: 55px;
+  left: 0;
+}
+
+ul li ul  li{
+  display: block;
+}
+
+.category1 ul li ul{
+  display: none;
+}
+
+.category1 ul li:hover ul{
+  display: block;
+}
+
+.category2 ul li ul{
+  display: none;
+}
+
+.category2 ul li:hover ul{
+  display: block;
+} */ 
+
+.gnav{
+  display: flex;
+  height: 2rem;
+  margin: 0 auto;
+  /* width: 100px; */
+}
+
+.gnav > li{
+  width: 25%;
+}
+
+.gnav li{
+  list-style: none;
+  position: relative;
+}
+
+.ganv li a{
+  display: block;
+  height: 2rem;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+}
+
+.gnav li li{
+  height: 0;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.gnav li li a{
+  border-top: 1px solid #eee;
+}
+
+.gnav li:hover > ul > li{
+  height: 2rem;
+  overflow: visible;
 }
