ドロップダウンメニューの孫要素・ひ孫要素追加

--- a/style.css
+++ b/style.css
@@ -114,3 +114,10 @@ ul li ul  li{
   height: 2rem;
   overflow: visible;
 }
+
+.gnav li ul li ul{
+  left: 50%;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
