--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+.header-logo{
+  display: flex;
+  align-content: center;
+}
+
+
 .form-box{
   display: flex;
   border: 1px solid lightgray;
   border-radius: 5px;
   width: 300px;
-  padding: 5px 0 5px 5px;
+  padding: 10px 0 10px 5px;
   background-color: #f5f5f5;
 }
 
@@ -12,6 +18,7 @@
   width: 100%;
   background-color: #f5f5f5;
   outline: none;
+  font-size: 15px;
 }
 
 .form-button{
@@ -99,4 +106,52 @@
 
 .main-img{
   max-width: 100%;
+}
+
+h1{
+  font-size: 25px;
+  text-align: center;
+  margin: 50px 0 20px 0;
+}
+
+
+.picup{
+  padding: 0.25em 0.5em;
+  text-decoration: none;
+  color: black;
+  background-color: rgb(228, 228, 228);
+  border: solid 1px rgb(228, 228, 228);
+  border-radius: 20px;
+}
+
+
+/* footer */
+
+.footer{
+  height: 400px;
+  background-color: #222222;
+}
+
+
+.footer-img{
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
+section{
+  float: left;
+  padding-left: 10px;
+}
+
+h2{
+  color: white;
+  font-size: 15px;
+  padding: 30px 0 10px 0;
+}
+
+p{
+  color: rgb(221, 221, 221);
+  font-size: 11px;
+  letter-spacing: 2px;
+  line-height: 30px;
 }
