--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 .header-logo{
   display: flex;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
 }
-
 
 .form-box{
   display: flex;
   border: 1px solid lightgray;
   border-radius: 5px;
-  width: 300px;
+  width: 800px;
   padding: 10px 0 10px 5px;
   background-color: #f5f5f5;
 }
@@ -32,6 +33,7 @@
   width: 160px;
   height: 40px;
   object-fit: cover;
+  padding-right: 20px;
 }
 
 .fa-red:before{
@@ -154,4 +156,9 @@ p{
   font-size: 11px;
   letter-spacing: 2px;
   line-height: 30px;
+}
+
+.fa-white{
+  color: white;
+  padding:10px;
 }
