--- a/style.css
+++ b/style.css
@@ -44,21 +44,22 @@
   display: flex;
   height: 2rem;
   margin: 0 auto;
-  /* width: 500px; */
-  /* padding: 10px 200px; */
+  width: 1200px;
 }
 
 a{
   text-decoration: none;
   color: black;
   font-family: monospace;
+  padding: 0px 5px;
 }
 
 .gnav > li{
-  width: 10%;
+  width: 25%;
 }
 
 .gnav li{
+  width: 150px;
   list-style: none;
   position: relative;
 }
@@ -75,7 +76,6 @@ a{
   height: 0;
   overflow: hidden;
   transition: .5s;
-
 }
 
 .gnav li li a{
@@ -94,6 +94,18 @@ a{
   width: 100%;
 }
 
+.gnav li ul li{
+  background-color: white;
+  padding-left: 10px;
+  top: 10px;
+  width: 110%;
+}
+
+.gnav ul li ul li{
+  left: 50%;
+}
+
+
 .sign{
   padding: 0.5em 1em;
   text-decoration: none;
@@ -101,7 +113,7 @@ a{
   background-color: #EE0000;
   border: solid 1px #EE0000;
   border-radius: 4px;
-  margin-left: 740px;
+  margin-left: 600px;
 }
 
 .login{
